2005-01-06  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_4L.xml, printer/Kyocera-FS-6500.xml,
	  printer/Kyocera-FS-6500plus.xml, printer/Ricoh-Aficio_401.xml,
	  printer/Okidata-Super_6e.xml, printer/Okidata-OL410e.xml,
	  printer/Canon-LBP-430.xml, printer/HP-LaserJet_5L.xml,
	  printer/HP-LaserJet_6L.xml, printer/HP-LaserJet_5P.xml,
	  printer/HP-LaserJet_3P_w_PCL5.xml: Changed recommended driver
	  from HPIJS to "ljet4". These printers do only 300 dpi or
	  work better with 300 dpi than with 600 dpi and with 300 dpi
	  "ljet4" gives the better output quality.

	* printer/HP-LaserJet_6P.xml: Text update.

	* opt/6.xml: Put default resolution down to 300 dpi for
	  HP LaserJet 5L, 5P, 6L and down to 150 dpi for the HP
	  LaserJet 3P with PCL5 extension.

2004-12-20  Tim Waugh <twaugh@redhat.com>

	* printer/Epson-Stylus_CX3200.xml: Added IEEE 1284
	  information (RH bug #143343).

2004-12-08  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-DeskJet_5740.xml: Added IEEE-1284 ID for USB.

2004-12-06  Chris Lawrence <lawrencc@debian.org>

	* db/source/printer/Epson-Stylus_C20UX.xml,
	  db/source/printer/Okidata-Okipage_10ex.xml:
	  Add autodetect information.

2004-12-03  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/HP-LaserJet_9040_9050.xml,
	  printer/HP-LaserJet_9040_9050_MFP.xml: Corrected entries for HP
	  LaserJet 9040/9050 MFP printers.

2004-12-03  Chris Lawrence <lawrencc@debian.org>

	* driver/Postscript.xml: Made renderer command line also working
	  with standard shell and not only with bash.

	* printer/Canon-BJC-2100.xml, printer/Epson-Stylus_C80.xml,
	  printer/Epson-Stylus_C84.xml,
	  printer/Epson-Stylus_Color_480.xml,
	  printer/Epson-Stylus_Photo_890.xml,
	  printer/Epson-Stylus_Photo_RX500.xml,
	  printer/HP-Color_LaserJet_2550.xml, printer/HP-DeskJet_3420.xml,
	  printer/HP-DeskJet_3650.xml, printer/HP-DeskJet_656C.xml,
	  printer/HP-DeskJet_820C.xml, printer/HP-DeskJet_845C.xml,