@@ -25,7 +25,13 @@
     </text>
   </lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <usb>
+      <manufacturer>EPSON</manufacturer>
+      <model>Stylus Photo R300</model>
+      <description>EPSON Stylus Photo R300</description>
+      <cmdset>ESCPL2,BDC,D4</cmdset>
+    </usb>
+  </autodetect>
   <functionality>D</functionality>
   <driver>gimp-print</driver>
   <!--no "contrib_url"-->
