@@ -1,3 +1,8 @@
+2005-01-07  Tim Waugh <twaugh@redhat.com>
+
+	* printer/Epson-Stylus_Photo_R300.xml: Added IEEE 1284
+	  information (RH bug #143939).
+
 2005-01-06  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-LaserJet_4L.xml, printer/Kyocera-FS-6500.xml,
